---
source: parser/src/parser/parser.rs
description: "# Unindent does not match any outer indentation level\nif True:\n        pass\n    pass\n"
input_file: parser/test_data/inputs/indentation.py
---
[
    InvalidSyntax {
        msg: "Unindent does not match any outer indentation level",
        input: "",
        advice: "",
        span: (
            76,
            80,
        ),
    },
]
